Minor fixes: - Spacing between "more of" and "Paleocene". - Render lag for comic outlines.

--- a/src/paleocene/index.css
+++ b/src/paleocene/index.css
@@ -23,6 +23,7 @@ body {
     color: white;
     margin: 0;
     padding: 0;
+    visibility: hidden;
 }
 a {
     color: white;
@@ -200,6 +201,9 @@ input[type=submit]:hover {
     color: black;
     display: flex;
     padding: 2em;
+}
+.cta span + img {
+    margin-left: 1em;
 }
 .rating {
     font-size: smaller;
