--- a/src/pleistocene/index.css
+++ b/src/pleistocene/index.css
@@ -26,6 +26,7 @@ body {
     color: black;
     margin: 0;
     padding: 0;
+    visibility: hidden;
 }
 a {
     color: black;
